--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "TestManager - manages test results and generates full traceability reports.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel lib/ -d build -s",
+    "build:lint": "eslint 'lib/**' --ext .js,.jsx --env browser,node",
+    "driver": "npm run build && node ./build/drv.js",
+    "test": "npm run build && NODE_ENV=development istanbul cover --report html mocha -- --compilers js:babel-core/register --require ./test/setup.js --recursive test/**/*.spec.js"
   },
   "repository": {
     "type": "git",
-#   "url": "git+https://github.com/h20dragon/testmgrjs.git"
-    "url": "git://github.com/h20dragon/testmgrjs.git"
+    "url": "git+https://github.com/h20dragon/testmgrjs.git"
   },
   "keywords": [
     "TestManager",
@@ -23,5 +25,28 @@
   "bugs": {
     "url": "https://github.com/h20dragon/testmgrjs/issues"
   },
-  "homepage": "https://github.com/h20dragon/testmgrjs#readme"
+  "homepage": "https://github.com/h20dragon/testmgrjs#readme",
+  "devDependencies": {
+    "async": "^2.1.5",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "chai": "^3.5.0",
+    "eslint": "^3.15.0",
+    "eslint-plugin-loosely-restrict-imports": "^0.1.15",
+    "eslint-plugin-react": "6.2.0",
+    "istanbul": "^1.1.0-alpha.1",
+    "jsdom": "^9.11.0",
+    "mocha": "^3.2.0",
+    "should": "^11.2.0",
+    "sinon": "^1.17.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
