--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "testmgr",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TestManager - manages test results and generates full traceability reports.",
   "main": "index.js",
+  "directories": {
+        "lib": "lib/"
+   },
   "scripts": {
     "build": "babel lib/ -d build -s",
     "build:lint": "eslint 'lib/**' --ext .js,.jsx --env browser,node",
