--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "TestManager - manages test results and generates full traceability reports.",
   "main": "index.js",
   "directories": {
-    "lib": "build/"
+    "lib": "lib/"
   },
   "scripts": {
-    "build": "babel lib/ -d build -s",
-    "build:lint": "eslint 'lib/**' --ext .js,.jsx --env browser,node",
+    "build": "babel src/ -d lib -s",
+    "build:lint": "eslint 'src/**' --ext .js,.jsx --env browser,node",
     "driver": "npm run build && node ./build/drv.js",
     "driver-debug": "npm run build && DEBUG=qa-test  node ./build/drv.js",
     "test": "npm run build && NODE_ENV=development istanbul cover --report html mocha -- --compilers js:babel-core/register --require ./test/setup.js --recursive test/**/*.spec.js"
