Updated winston as a dep.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testmgr",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "TestManager - manages test results and generates full traceability reports.",
   "main": "index.js",
   "directories": {
@@ -51,10 +51,10 @@
     "should": "^11.2.0",
     "sinon": "^1.17.7",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1",
-    "winston": "^2.3.1"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "debug": "^2.6.1"
+    "debug": "^2.6.1",
+    "winston": "^2.3.1"
   }
 }
